tests/paczka1/fuzzy1/37496657.err
Error in line 3: eRc S270 07,4
Error in line 2: eRc S270 10,6
Error in line 5: S270 A714 21,9
Error in line 15: eRc A256 1,9
Error in line 16: eRc S943 9,4
Error in line 21: 1ztwb3Onva S943 149,7
Error in line 31: S270 S270 10,8
Error in line 29: 59ZFQI6ukw S270 14,0
Error in line 30: 1ztwb3Onva A256 56,1
